# BioAI

./: .gitignore
Project1/: GeneticAlgorithm.py  LinReg.py  ProblemDomain.py  config.ini  main.py
project_1/: GeneticAlgorithm.py  LinReg.py  ProblemDomain.py  main.py
project_2/: Cargo.toml  solution.txt  solution_detail.txt
project_2/plotting/: bio_ai_plotter.py
project_2/plotting/src/: gen_alg.rs  main.rs  plotting.rs  population_init.rs  tests.rs
project_2/src/: crossover.rs  fitness.rs  gen_alg.rs  helper.rs  individual.rs  kmeans.rs  main.rs  mutation.rs  parsing.rs  selection.rs  tests.rs
project_2/test/: test_0.json  test_1.json  test_2.json
