[package]
name = "project_2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand  = "0.8"
serde_json = "1.0"
serde = { version =  "1.0.136", features = ["derive"] }
plotters = "0.3.1"
approx = "0.5.1"
rand_chacha = "0.3"
ordered-float = "2.10.0"

[dev-dependencies]

